data/derived/fa15/progs/unify/prog3368.ml.out
Characters 116-118:
  in if len1 > len2 then  clone 0 (len1-l2) @ l2 else clone 0 (len2-len1) @ l1;;
                                        ^^
Error: This expression has type 'a list
       but an expression was expected of type int
